; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/pthreads/platform/psp/extr_psp_osal.c_getTlsStructFromThread.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/pthreads/platform/psp/extr_psp_osal.c_getTlsStructFromThread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@.str = private unnamed_addr constant [16 x i8] c"pthread%04d__%x\00", align 1
@globalTls = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @getTlsStructFromThread to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @getTlsStructFromThread(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  store i32 8, i32* %8, align 4
  %9 = load i32, i32* %3, align 4
  %10 = call i32 @sceKernelReferThreadStatus(i32 %9, %struct.TYPE_3__* %4)
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @sscanf(i32 %12, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i32* %6, i32* %5)
  store i32 %13, i32* %7, align 4
  %14 = load i32, i32* %7, align 4
  %15 = icmp eq i32 %14, 2
  br i1 %15, label %16, label %20

16:                                               ; preds = %1
  %17 = load i32, i32* %5, align 4
  %18 = zext i32 %17 to i64
  %19 = inttoptr i64 %18 to i8*
  store i8* %19, i8** %2, align 8
  br label %22

20:                                               ; preds = %1
  %21 = load i8*, i8** @globalTls, align 8
  store i8* %21, i8** %2, align 8
  br label %22

22:                                               ; preds = %20, %16
  %23 = load i8*, i8** %2, align 8
  ret i8* %23
}

declare dso_local i32 @sceKernelReferThreadStatus(i32, %struct.TYPE_3__*) #1

declare dso_local i32 @sscanf(i32, i8*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
